2nd push
Nov 14 - Nov 30, Timesheet Issues resolved. Mainly Brute Force prevention, Facebook and Google Authentication, Google ReCAPTCHA
